Fix header alignment

--- a/style/less/kent/structure.less
+++ b/style/less/kent/structure.less
@@ -59,6 +59,10 @@
 		        margin-top: 4px;
 				vertical-align: bottom;
 
+				span {
+					vertical-align: bottom;
+				}
+
                 @media (max-width: @screen-xs-max) {
                 	text-align: center;
                 }
